--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,9 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Home";
+const pageTitle = "About";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2>Home</h2>
+    <h2>About me</h2>
+    <p></p>
 </BaseLayout>
