--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Home";
+const pageTitle = "Publish";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2>Home</h2>
+    <h2>Publications</h2>
 </BaseLayout>
