--- a/src/pages/research.astro
+++ b/src/pages/research.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Home";
+const pageTitle = "Research";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2>Home</h2>
+    <h2>Reasearch</h2>
 </BaseLayout>
