--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,9 @@
-html {
-    background-color: white;
+@import url("./fonts.css");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    /* Override css rules here for element or classes*/
 }
