MasterBranch: (Base), logo and folder

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,15 +5,15 @@ const pages = [
         name: "Home",
     },
     {
-        path: "research",
+        path: "/research",
         name: "Research",
     },
     {
-        path: "publications",
+        path: "/publications",
         name: "Publications",
     },
     {
-        path: "about",
+        path: "/about",
         name: "About me",
     },
 ];
