--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,13 +22,13 @@ const { pageTitle } = Astro.props;
                 <ul>
                     <li>
                         <a href="mailto:olivier.tramis@outlook.fr">
-                            <img src="/icon-mail.svg" alt="Mail Icon" />
+                            <img src="/assets/icon-mail.svg" alt="Mail Icon" />
                         </a>
                     </li>
                     <li>
                         <a
                             href="https://www.linkedin.com/in/otramis-012121985/">
-                            <img src="/icon-linkedin.svg" alt="LinkedIn Icon" />
+                            <img src="/assets/icon-linkedin.svg" alt="LinkedIn Icon" />
                         </a>
                     </li>
                 </ul>
