--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,6 @@ const pageTitle = "About";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2>About me</h2>
+    <h2 class="text-4xl uppercase font-bold">{pageTitle}</h2>
     <p></p>
 </BaseLayout>
