--- a/src/pages/research.astro
+++ b/src/pages/research.astro
@@ -4,5 +4,5 @@ const pageTitle = "Research";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2>Reasearch</h2>
+    <h2 class="text-4xl uppercase font-bold">{pageTitle}</h2>
 </BaseLayout>
