--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,5 @@ const pageTitle = "Home";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2>Home</h2>
+    <h2 class="text-4xl uppercase font-bold">Home</h2>
 </BaseLayout>
