--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Publish";
+const pageTitle = "Publications";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2>Publications</h2>
+    <h2 class="text-4xl uppercase font-bold">{pageTitle}</h2>
 </BaseLayout>
