--- a/src/pages/research/environment.astro
+++ b/src/pages/research/environment.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Research";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+const pageTitle = "Environment";
 ---
 
 <BaseLayout {pageTitle}>
