--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -40,7 +40,7 @@ let isShow = true;
         {
             pages.map((page) => {
                 {
-                    if (page.name === pageTitle) {
+                    if (page.routes) {
                         return (
                             <>
                                 <li class="flex mt-1 rounded-t bg-slate-200">
