Master: Images + nav

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,4 +1,5 @@
 ---
+const { pageTitle } = Astro.props;
 const pages = [
     {
         path: "/",
@@ -31,8 +32,9 @@ const pages = [
         name: "About",
     },
 ];
-const { pageTitle } = Astro.props;
-let isShow = true;
+const currentPageBgColor = "text-slate-200 bg-slate-600 rounded";
+const currentPageColor = "";
+const hoverTextColor = "hover:text-slate-600";
 ---
 
 <nav class="w-full basis-3/4 pt-5">
@@ -43,7 +45,15 @@ let isShow = true;
                     if (page.routes) {
                         return (
                             <>
-                                <li class="flex mt-1 rounded-t bg-slate-200">
+                                <li
+                                    class:list={[
+                                        `flex mt-1 rounded-t ${hoverTextColor}
+                                        ${
+                                            page.name === pageTitle
+                                                ? currentPageBgColor
+                                                : "bg-slate-300"
+                                        }`,
+                                    ]}>
                                     <a
                                         class="flex grow p-2 text-xl font-bold"
                                         href={page.path}>
@@ -52,7 +62,15 @@ let isShow = true;
                                 </li>
                                 <ul>
                                     {page.routes.map((route) => (
-                                        <li class="flex pl-5 bg-slate-200 last-of-type:rounded-b last-of-type:mb-1">
+                                        <li
+                                            class:list={[
+                                                `flex pl-5 last-of-type:rounded-b last-of-type:mb-1 ${hoverTextColor}
+                                                ${
+                                                    route.name === pageTitle
+                                                        ? currentPageBgColor
+                                                        : "bg-slate-300"
+                                                }`,
+                                            ]}>
                                             <a
                                                 class="flex grow p-2 text-l font-bold"
                                                 href={page.path + route.path}>
@@ -65,7 +83,14 @@ let isShow = true;
                         );
                     } else {
                         return (
-                            <li class="flex my-1 rounded bg-slate-200">
+                            <li
+                                class:list={[
+                                    `flex mt-1 rounded ${hoverTextColor} ${
+                                        page.name === pageTitle
+                                            ? currentPageBgColor
+                                            : "bg-slate-300"
+                                    }`,
+                                ]}>
                                 <a
                                     class="flex grow p-2 text-xl font-bold"
                                     href={page.path}>
