--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,37 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+// @ts-ignore
+import { Picture } from "@astrojs/image/components";
 const pageTitle = "Home";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2 class="text-4xl uppercase font-bold">Home</h2>
+    <h2 class="text-4xl font-bold mt-7">Home</h2>
+    <article>
+        <p>Some text</p>
+        <Picture
+            src="/assets/images/home-1.png"
+            widths={[200, 400, 800]}
+            aspectRatio="4:3"
+            sizes="(max-width: 600px) 50vw, 400px"
+            formats={["png"]}
+            alt="Home1"
+        />
+        <Picture
+            src="/assets/images/home-2.png"
+            widths={[200, 400, 800]}
+            aspectRatio="4:3"
+            sizes="(max-width: 600px) 50vw, 400px"
+            formats={["png"]}
+            alt="Home2"
+        />
+        <Picture
+            src="/assets/images/home-3.png"
+            widths={[200, 400, 800]}
+            aspectRatio="4:3"
+            sizes="(max-width: 600px) 50vw, 400px"
+            formats={["png"]}
+            alt="Home3"
+        />
+    </article>
 </BaseLayout>
