--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,9 @@
 import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
 const { pageTitle } = Astro.props;
+/* CSS colors */
+const bgColorMain = "bg-white";
+const bgColorAside = "bg-neutral-100";
 ---
 
 <html lang="en">
@@ -14,7 +17,7 @@ const { pageTitle } = Astro.props;
     </head>
     <body class="flex">
         <aside
-            class="flex flex-col basis-1/5 items-center min-w-[200px] px-4 bg-slate-300">
+            class=`flex flex-col basis-1/5 items-center min-w-[200px] px-4 border-r border-zinc-500 ${bgColorAside}`>
             <section class="flex flex-col basis-1/4 justify-evenly w-full">
                 <h1 class="text-3xl text-center font-bold">Olivier Tramis</h1>
                 <p class="text-xl text-center font-bold">
@@ -49,11 +52,11 @@ const { pageTitle } = Astro.props;
             <Navigation {pageTitle} />
         </aside>
 
-        <main class="flex flex-col basis-4/5 bg-slate-600">
-            <article class="flex flex-col items-center">
+        <main class=`flex flex-col basis-4/5 ${bgColorMain}`>
+            <section class="flex flex-col items-start p-4">
                 <!-- Pages content goes here / Astro.props comes from here -->
                 <slot />
-            </article>
+            </section>
         </main>
     </body>
 </html>
