--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,8 @@ const pageTitle = "About";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2 class="text-4xl uppercase font-bold">{pageTitle}</h2>
-    <p></p>
+    <h2 class="text-4xl font-bold mt-7">{pageTitle}</h2>
+    <article>
+        <p>Some text</p>
+    </article>
 </BaseLayout>
