--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -4,5 +4,8 @@ const pageTitle = "Publications";
 ---
 
 <BaseLayout {pageTitle}>
-    <h2 class="text-4xl uppercase font-bold">{pageTitle}</h2>
+    <h2 class="text-4xl font-bold mt-7">{pageTitle}</h2>
+    <article>
+        <p>Some text</p>
+    </article>
 </BaseLayout>
