--- a/src/pages/research/environment.astro
+++ b/src/pages/research/environment.astro
@@ -1,8 +1,14 @@
 ---
+import ResearchTitle from "../../components/ResearchTitle.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 const pageTitle = "Environment";
 ---
 
+<!-- Research Environment page  -->
 <BaseLayout {pageTitle}>
-    <h2 class="text-4xl uppercase font-bold">{pageTitle}</h2>
+    <ResearchTitle />
+    <h2 class="text-4xl font-bold">{pageTitle}</h2>
+    <article>
+        <p>Some text</p>
+    </article>
 </BaseLayout>
