--- a/src/pages/research/index.astro
+++ b/src/pages/research/index.astro
@@ -3,6 +3,10 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 const pageTitle = "Research";
 ---
 
+<!-- Research Home page -->
 <BaseLayout {pageTitle}>
-    <h2 class="text-4xl uppercase font-bold">{pageTitle}</h2>
+    <h2 class="text-4xl font-bold mt-7">{pageTitle}</h2>
+    <article>
+        <p>Some text</p>
+    </article>
 </BaseLayout>
