--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,18 @@
     /* Override css rules here for element or classes*/
     html,
     body {
-        height: 100dvh;
+        min-height: 100dvh;
+    }
+    main section article {
+        margin: 2em 0;
+    }
+    main section h3 {
+        font-weight: bold;
+        font-size: 1.2em;
+        margin-bottom: 0.75em;
+    }
+    main section p,
+    main section li {
+        text-align: justify;
     }
 }
